<resources>
    <string name="app_name">ChatApp2</string>
    <string name="action_settings">Profile Settings</string>
    <string name="title_activity_message">Message</string>
    <string name="block">block</string>
    <string name="title_activity_loggin">loggin</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing emailcompletions."</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="cant_view_profile">Can\'t view profile</string>
    <string name="firebase_storage_url">gs://fcmtest-e36f1.appspot.com</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="open_chat">Open Chat</string>
    <string name="save_change">save change</string>
    <string name="friend_uploading">"your friend is uploading file "</string>
    <string name="uploading">"uploading file "</string>
    <string name="download">"download "</string>
    <string name="fialed_upload">Fialed to upload</string>
    <string name="error_inputs">Error check your inputs</string>
    <string name="network_probelm">can\'t view profile image</string>
    <string name="cant_down">can\'t download file</string>
    <string name="downloaded">Downloaded</string>
    <string name="donwloading_file">downloading file</string>
    <string name="no_conn">No Connection</string>
    <string name="fail_upload">Fialed to upload</string>
    <string name="blocked_text">you can\'t connect him</string>
    <string name="type_any_message">type frist message to send him a request</string>
    <string name="action_contacts">my contacts</string>
    <string name="enter_phone_number">enter phone number</string>
    <string name="msg_no_files">No files or directories</string>
    <string name="filename">Filename</string>
    <string name="user_1">user 1</string>
    <string name="write_a_message">write a message</string>
    <string name="birthday">birthday</string>
    <string name="your_name">your name</string>
    <string name="search_chat">Search Chat</string>
    <string name="phone_number">phone number</string>
    <string name="emoji_image">Emoji Image</string>
    <string name="image_profile">Image Profile</string>
    <string name="widget_profile_image">Widget Profile Image</string>
    <string name="status_image">Status Image</string>
    <string name="file_picker_image">File Picker Image</string>
    <string name="image_prof">Profile Image</string>
    <string name="back_image">Back Image</string>
    <string name="enter_name">Please Enter Your Name</string>
    <string name="enter_phone">Please Enter Your Phone</string>
    <string name="phone_digits">Phone must be 11 digit</string>
    <string name="enter_birth_day">Please Enter Your BirthDay</string>

    <string name="action_sign_out">Sign Out</string>
    <string name="start_must_zero">Phone Number must start with Zero</string>
</resources>
