<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.amr5aled.chatapplication.FilePicker.chatapp.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_action_name"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_contacts"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="101"
        android:title="@string/action_sign_out" />
</menu>
